<resources>
    <string name="app_name">Top Deals</string>
    <string name="slide_2_text_1">MOVIES, CINEMAS, EVENTS</string>
    <string name="slide_2_text_2">&amp; ENTERTAINMENT</string>
    <string name="slide_2_text_3">ON YOUR FINGER TIPS</string>
    <string name="slide_3_text_1">TRAVEL &amp; TOURS, HOTELS &amp;</string>
    <string name="slide_3_text_2">SPAS, SPORTS &amp; FITNESS</string>
    <string name="slide_3_text_3">&amp; MUCH MORE</string>
    <string name="help_question1">What is Top Deals  Service all about?</string>
    <string name="help_answer1"><![CDATA[Top Deals is a Smartphone Application service which provides a platform to view best Deals & Discounts on Top Brands in Pakistan. With major brands on-board ranging from fashion & lifestyle to health & fitness, Shopping, Restaurants and much more, Top Deals has it All!\n\n Top Deals also offers a variety of Exclusive Deals available to the users who can later avail them from the respective stores/outlets via deal redemption process.]]></string>
    <string name="help_question2">What do I get from Top Deals?</string>
    <string name="help_answer2"><![CDATA[Top Deals users get Exclusive Deals & Discounts along with latest updates of the related categories. The user can also search any business of their liking and get the contact details. The categories for which deals & updates are offered are as follows:
    \n\t\t1. Top Deals
    \n\t\t2. Food Deals
    \n\t\t3. Shopping
    \n\t\t4. Lifestyle
    \n\t\t5. Entertainment]]></string>
    <string name="help_question3">How to use Top Deals Application?</string>
    <string name="help_answer3">In order to use Top Deals Application, following steps are to be followed:</string>
    <string name="help_answer3a">1. User downloads the Top Deals Smartphone Application from Play Store.</string>
    <string name="help_answer3b">2. User Signs in by entering his/her number.</string>
    <string name="help_answer3c">3. User is free to use the Application without any charges.</string>
    <string name="help_question4">What are the Smartphone Application Charges?</string>
    <string name="help_answer4">Top Deals Application is free of any cost. User is neither charged for downloading nor for using it.</string>
    <string name="help_question5">How can a User Redeem Exclusive Deals?</string>
    <string name="help_answer5">The User can redeem the deal through following steps:</string>
    <string name="help_answer5a">Step 1: User views the deal on APP.
    \nStep 2: User will have to click on Redeem Deal Button. (Only for Exclusive Deals)
    \nStep 3: User will have to enter merchant code.</string>
    <string name="help_answer5b">i.	Merchant can enter the code for User on their mobile.
    \nii. Merchant can share the code with User.
    \niii. Merchant codes will be put on display in their shops and User can enter it himself.</string>
    <string name="help_question6">How can a user Sign-Out from this service?</string>
    <string name="help_answer6a">User can sign-out by simply clicking on ‘Sign Out’ button from Main Menu, given on the home screen. Once done, the user will exit the Application.</string>
    <string name="num_confirm_text">Please enter your Mobile Number.</string>
    <string name="qatar_code">92</string>
    <string name="error_invalid_num">Please enter a valid Mobile Number</string>
    <string name="subscription_charges">You will be charged Rs <b>5</b>/week</string>
    <string name="share_with_friends_txt">Hi, I just found this great App for you called Top Deals. You can find businesses and enjoy Premium Discounts of your favorite Top Brands. Simply download the Application
        from PlayStore &amp; avail the Best Deals in your city!</string>
    <string name="food_dining">Food Deals</string>
    <string name="special_discounts">Special Deals</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="restaurants_menu">Restaurants and Menu</string>
    <string name="shopping_speciality">Shopping</string>
    <string name="clothing">Clothing</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="others">Others</string>

    <string name="health_fitness">Health and Fitness</string>
    <string name="beauty_fitness_tips">Beauty and Fitness Tips</string>
    <string name="health_care_center">Health Care Center</string>
    <string name="weight_gain_tips">Weight Gain Tips</string>
    <string name="weight_loss_tips">Weight Loss Tips</string>
    <string name="education">Education</string>
    <string name="universities_institutes">Universities and Institutes</string>
    <string name="colleges_schools">Colleges &amp; Schools</string>
    <string name="tuition_centers">Tuition Centers</string>
    <string name="day_care">Day Care &amp; Pre School</string>
    <string name="overseas_consultants">Overseas Consultants</string>
    <string name="cinemas_entertainment">Cinemas and Entertainment</string>
    <string name="talk_shows">Talk Shows and Alerts</string>
    <string name="funny_sms">Funny Sms</string>
    <string name="travel">Travel</string>
    <string name="ladies">Ladies</string>
    <string name="tips">Tips</string>
    <string name="copyrights_text">© Copyright 2016 Top Deals Application\nAll rights reserved.</string>

    <string name="fast_food">Fast Food</string>
    <string name="cafe">Cafe</string>
    <string name="spas_salons">Spas &amp; Salons</string>
    <string name="TXT_DETAILS"><![CDATA[You have successfully signed in on Top Deals.\nFind popular venues, great local businesses,\nDiscover deals, products & services closest to \n you, wherever you are!]]></string>
    <string name="Unsubscribe_Bizstore">Sign out Top Deals</string>
    <string name="un_subscribe">Sign out</string>
    <string name="unsub_details">By signing out of Top Deals, you will no longer get promotion or service alerts from application.</string>
    <string name="deals_of_the_day">Deals Of The Day</string>
    <string name="deals_discount">Deals</string>
    <string name="Search_for_Deals">Search for Deals</string>
    <string name="Deal_Description">Deal Description</string>
    <string name="redeemed_deals">Redeemed Deals</string>
    <string name="rate_deal">Rate this deal</string>
    <string name="deals">Deals</string>
    <string name="featured_deals">Featured Deals</string>
    <string name="deal">Deal</string>
    <string name="redeem_deal">Redeem deal</string>
    <string name="deal_valid_till">This deal is valid till</string>
    <string name="similar_deals">Similar Deals</string>
    <string name="no_nearby_deals">No nearby deals found</string>
    <string name="deal_has_been_viewed">This deal has been viewed</string>
    <string name="error_no_nearby_deals">No Nearby Deals Available!</string>
    <string name="deal_loc_not_availabe">Deal location is not available!</string>
    <string name="error_no_deal_redeemed">You haven\'t redeemed any deal yet!</string>
    <string name="hotels_deals">Hotels &amp; Deals</string>
    <string name="brands_deals">Brands &amp; Deals</string>
    <string name="deals_brand">Deals &amp; Brands</string>
    <string name="dealss">deal(s).</string>
    <string name="top_deals">Top Deals</string>
    <string name="nearby">Nearby Deals</string>
    <string name="my_city">City</string>
    <string name="city_selection_text">Please select your city.</string>
    <string name="un_sub_success">Dear User, you have successfully unsubscribed from Top Deals!</string>
    <string name="unsub_from_service">You have been Unsubscribed from Top Deals</string>
    <string name="host">topdeals.deal</string>
    <string name="host_business">todeals</string>

</resources>
